[gd_scene load_steps=3 format=3 uid="uid://xs1mbrut6i15"]

[ext_resource type="Script" path="res://Scenes/UI/Menus/main_menu.gd" id="1_mh82w"]
[ext_resource type="Texture2D" uid="uid://quwiiakxfu14" path="res://Assets/Player/p1_front.png" id="2_0ub7p"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mh82w")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 83.0
offset_top = 80.0
offset_right = -585.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0ub7p")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 658.0
offset_top = 80.0
offset_right = -130.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Play" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Jugar"

[node name="Credits2" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Seleccionar nivel
"

[node name="LevelSelect" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Opciones"

[node name="Credits" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Créditos
"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -136.0
offset_right = 180.0
grow_vertical = 0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Iniciar	"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Opciones"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Créditos
"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Salir"

[connection signal="pressed" from="Panel/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Credits2" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Credits" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
