[gd_scene load_steps=41 format=3 uid="uid://02phwtp7a3n4"]

[ext_resource type="Script" path="res://Scenes/UI/Menus/main_menu.gd" id="1_kd03o"]
[ext_resource type="VideoStream" path="res://menuVideo.ogv" id="3_f42mq"]
[ext_resource type="Texture2D" uid="uid://c58rmr5orwwy0" path="res://Assets/UI/Prefab/2.png" id="4_oj2r3"]
[ext_resource type="Texture2D" uid="uid://bftwh60p73ir7" path="res://Assets/UI/Prefab/12.png" id="5_mi0w8"]
[ext_resource type="Texture2D" uid="uid://0g4r3hshc2sj" path="res://Assets/UI/LevelUI/Small Text/Small Icons/8.png" id="8_5h74b"]
[ext_resource type="Texture2D" uid="uid://cmw6xau027ubi" path="res://Assets/UI/LevelUI/Green Button/1.png" id="8_wp7bq"]
[ext_resource type="Texture2D" uid="uid://bqbrmgbo2pkqp" path="res://Assets/UI/LevelUI/Small Text/Small Icons/12.png" id="9_umixw"]
[ext_resource type="Texture2D" uid="uid://cwdiyt0ke17c6" path="res://Assets/UI/LevelUI/Small Banner/9.png" id="10_swwal"]
[ext_resource type="Texture2D" uid="uid://c7put1saaomdr" path="res://Assets/UI/LevelUI/Small Banner/4.png" id="11_l0m0g"]
[ext_resource type="Theme" uid="uid://bkxmys60y8ksu" path="res://PirateTheme.tres" id="11_mbr4u"]
[ext_resource type="Texture2D" uid="uid://3i36y53bxbwm" path="res://Assets/UI/LevelUI/Green Button/16.png" id="13_rat4k"]
[ext_resource type="Texture2D" uid="uid://cxcwjdwerd6f6" path="res://Assets/UI/LevelUI/Green Button/15.png" id="14_ly84j"]
[ext_resource type="Texture2D" uid="uid://bnon3u5sbwreo" path="res://Assets/UI/LevelUI/Green Button/14.png" id="15_c2wv4"]
[ext_resource type="Texture2D" uid="uid://fe0rpe0wjfvy" path="res://Assets/UI/LevelUI/Green Button/13.png" id="16_d1kd5"]
[ext_resource type="Texture2D" uid="uid://c8ja36aipkalh" path="res://Assets/UI/LevelUI/Green Button/12.png" id="17_hfun6"]
[ext_resource type="FontFile" uid="uid://cdp1w0hkk28v7" path="res://Assets/UI/Kenney Thick.ttf" id="18_vnxm0"]
[ext_resource type="Texture2D" uid="uid://8fs51k31depl" path="res://Assets/UI/LevelUI/Green Button/11.png" id="18_yac7b"]
[ext_resource type="Texture2D" uid="uid://dkogi762bbhh7" path="res://Assets/UI/LevelUI/Green Button/10.png" id="19_g4se3"]
[ext_resource type="Texture2D" uid="uid://djkwdo7mlxlhg" path="res://Assets/UI/LevelUI/Green Button/9.png" id="20_5g7oc"]
[ext_resource type="Texture2D" uid="uid://lbgg7o5e7rkf" path="res://Assets/UI/LevelUI/Green Button/8.png" id="21_jnm3q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ce1q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_06gfr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5u8ip"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k84i7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_07tv1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r8f70"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ts6dl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uviw1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ogv7s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_42y5u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1di7d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_djypc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1yfaf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4co8p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cqx4a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8rlao"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lrjfh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u8d88"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c1qbu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eq40n"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kd03o")
metadata/_edit_horizontal_guides_ = [-26.0]

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="Panel"]
modulate = Color(0.637843, 0.637843, 0.637843, 1)
layout_mode = 0
offset_right = 2306.0
offset_bottom = 1298.0
scale = Vector2(0.5, 0.5)
stream = ExtResource("3_f42mq")
autoplay = true
expand = true
loop = true

[node name="27" type="Sprite2D" parent="."]
position = Vector2(567, 315)
scale = Vector2(5, 5)
texture = ExtResource("4_oj2r3")

[node name="12" type="Sprite2D" parent="."]
position = Vector2(568, 309)
scale = Vector2(3, 3)
texture = ExtResource("5_mi0w8")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 484.0
offset_top = 222.0
offset_right = 649.0
offset_bottom = 267.0
theme = ExtResource("11_mbr4u")
theme_override_colors/font_color = Color(0.2, 0.196078, 0.239216, 1)
theme_override_fonts/font = ExtResource("18_vnxm0")
theme_override_font_sizes/font_size = 40
text = "MENU"

[node name="29" type="Sprite2D" parent="."]
position = Vector2(461, 329)
scale = Vector2(4, 4)
texture = ExtResource("8_wp7bq")

[node name="30" type="Sprite2D" parent="."]
position = Vector2(462, 400)
scale = Vector2(4, 4)
texture = ExtResource("8_wp7bq")

[node name="LevelSelectorButton" type="Button" parent="."]
layout_mode = 2
offset_left = 443.0
offset_top = 311.0
offset_right = 479.0
offset_bottom = 338.0
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme = ExtResource("11_mbr4u")
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_5ce1q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_06gfr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5u8ip")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_k84i7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_07tv1")
text = "
"
icon = ExtResource("8_5h74b")
icon_alignment = 1
expand_icon = true

[node name="OptionsButton" type="Button" parent="."]
layout_mode = 2
offset_left = 446.0
offset_top = 384.0
offset_right = 454.0
offset_bottom = 390.0
scale = Vector2(4, 4)
focus_neighbor_left = NodePath("../QuitButton")
focus_neighbor_top = NodePath("../LevelSelectorButton")
focus_neighbor_right = NodePath("../StartButton")
theme = ExtResource("11_mbr4u")
theme_override_styles/normal = SubResource("StyleBoxEmpty_r8f70")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ts6dl")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_uviw1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ogv7s")
theme_override_styles/focus = SubResource("StyleBoxEmpty_42y5u")
icon = ExtResource("9_umixw")
icon_alignment = 1
expand_icon = true

[node name="25" type="Sprite2D" parent="."]
position = Vector2(673, 459)
scale = Vector2(4, 4)
texture = ExtResource("10_swwal")

[node name="26" type="Sprite2D" parent="."]
position = Vector2(801, 459)
scale = Vector2(4, 4)
texture = ExtResource("11_l0m0g")

[node name="QuitButton" type="Button" parent="."]
layout_mode = 2
offset_left = 673.0
offset_top = 435.0
offset_right = 783.0
offset_bottom = 475.0
focus_neighbor_left = NodePath("../StartButton")
focus_neighbor_right = NodePath("../LevelSelectorButton")
theme = ExtResource("11_mbr4u")
theme_override_colors/font_color = Color(0.2, 0.196078, 0.239216, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_1di7d")
theme_override_styles/hover = SubResource("StyleBoxEmpty_djypc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1yfaf")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4co8p")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cqx4a")
text = "Salir"

[node name="17" type="Sprite2D" parent="."]
position = Vector2(614, 406)
scale = Vector2(3, 3)
texture = ExtResource("13_rat4k")

[node name="28" type="Sprite2D" parent="."]
position = Vector2(572, 406)
scale = Vector2(3, 3)
texture = ExtResource("14_ly84j")

[node name="14" type="Sprite2D" parent="."]
position = Vector2(530, 406)
scale = Vector2(3, 3)
texture = ExtResource("15_c2wv4")

[node name="13" type="Sprite2D" parent="."]
position = Vector2(614, 364)
scale = Vector2(3, 3)
texture = ExtResource("16_d1kd5")

[node name="31" type="Sprite2D" parent="."]
position = Vector2(572, 364)
scale = Vector2(3, 3)
texture = ExtResource("17_hfun6")

[node name="11" type="Sprite2D" parent="."]
position = Vector2(530, 364)
scale = Vector2(3, 3)
texture = ExtResource("18_yac7b")

[node name="10" type="Sprite2D" parent="."]
position = Vector2(614, 322)
scale = Vector2(3, 3)
texture = ExtResource("19_g4se3")

[node name="9" type="Sprite2D" parent="."]
position = Vector2(572, 322)
scale = Vector2(3, 3)
texture = ExtResource("20_5g7oc")

[node name="8" type="Sprite2D" parent="."]
position = Vector2(530, 322)
scale = Vector2(3, 3)
texture = ExtResource("21_jnm3q")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 518.0
offset_top = 310.0
offset_right = 626.0
offset_bottom = 412.0
focus_neighbor_left = NodePath("../OptionsButton")
focus_neighbor_right = NodePath("../QuitButton")
theme = ExtResource("11_mbr4u")
theme_override_colors/font_color = Color(0.2, 0.196078, 0.239216, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_8rlao")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lrjfh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_u8d88")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_c1qbu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_eq40n")
text = "JUGAR	"

[connection signal="pressed" from="LevelSelectorButton" to="." method="_on_level_selector_button_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
